--- a/main.css
+++ b/main.css
@@ -10,14 +10,23 @@ body{
     -webkit-text-size-adjust: 100%;
     color: black;
     overflow-x: hidden;
+    
 }
 
+.h2, h1, h1.large, h2, h3 {
+    box-sizing: border-box;
+    font-family: "Helvetica Now Display DW",sans-serif;
+    font-weight: 800;
+    letter-spacing: -.01em;
+    color: #0f141e;
+}
+
+
 .menu{
-    
-    border-radius: 10px;
+    border-radius: 40px;
     position: fixed;
-    right: 10px;
-    top: 85%;
+    right: 15px;
+    top: 5%;
     width: 70px;
     height: 70px;
 }
@@ -30,14 +39,6 @@ body{
     font-size: 15px;
     color:dimgray;
     letter-spacing: 0.1px;
-}
-
-.h2, h1, h1.large, h2, h3 {
-    box-sizing: border-box;
-    font-family: "Helvetica Now Display DW",sans-serif;
-    font-weight: 800;
-    letter-spacing: -.01em;
-    color: #0f141e;
 }
 
 .h1.large, h1.large.large {
@@ -56,12 +57,18 @@ body{
     padding-left: 35%;
 }
 
+.bg-projects{
+    
+    text-align: left;
+    padding-left: 5%;
+}
+
 .logo{
     padding: 30px;
 }
 
 .bg-image{
-    margin-left: 10% ;
+    margin-left: 10%;
 }
 
 .logo a:hover{
@@ -70,4 +77,69 @@ body{
     display:inline-block;
     opacity: 0.5;
 }
- 
+
+
+.item-portfolio{
+
+    display: inline-block;
+    padding-top: 2%;
+}
+
+
+#img1, #img3{
+    width: 670px;
+    height: 660px;
+}
+
+#img2, #img4{
+    margin-left: 6.7%;
+    width: 670px;
+    height: 660px;
+}
+
+.item-portfolio a:hover{
+    
+    opacity: 0.5;
+    -webkit-transition: opacity 0.5s ease-out;
+    -moz-transition: opacity 0.5s ease-out;
+}
+
+.end-page{
+    padding-left: 5%;
+}
+
+li{
+    color: gray;
+    list-style-type: none;
+}
+
+a, span{
+    color: #0f141e;
+    text-decoration: none;
+    
+}
+
+#logo-end{
+    opacity: 50%;
+    padding-top: 15%;
+}
+
+.contato, .social-media{
+    display: inline-block;
+}
+
+.social-media{
+    padding-left: 65%;
+}
+
+.logo-end-page{
+    display:flex;
+}
+
+.copyright{
+    color: gray;
+    padding-left: 2%;
+}
+
+
+
