--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+
+
 body{
     min-height: 100%;
     width: 100%;
@@ -10,7 +12,21 @@ body{
     -webkit-text-size-adjust: 100%;
     color: black;
     overflow-x: hidden;
+    background-color: #a0a0a0;
+    margin: 0;
+}
+
+.bg-image{
     
+    
+}
+
+.home-top{
+    background: url(https://cdn.discordapp.com/attachments/1143674943805063258/1143680039859265717/city_pop.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    transition: 250ms;
 }
 
 .h2, h1, h1.large, h2, h3 {
@@ -21,40 +37,62 @@ body{
     color: #0f141e;
 }
 
-
-.menu{
-    border-radius: 40px;
-    position: fixed;
-    right: 15px;
-    top: 5%;
-    width: 70px;
-    height: 70px;
+#sup{
+    display: inline;
+    float: left;
 }
 
-.bg-image{
-    position: right;
+#sup a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#sup a:hover:not(.active){
+    background-color: #4b4b4b;
+}
+
+.active{
+    background-color: #a55bb4;
+}
+
+.menu_ul{
+    position: fixed;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.menu{
+ margin: 0;
+ padding: 0;   
 }
 
 .bottom{
     font-size: 15px;
-    color:dimgray;
+    color:rgb(165, 165, 165);
     letter-spacing: 0.1px;
+    padding-left: 50%;
+
 }
 
-.h1.large, h1.large.large {
+
+.h1.large_nome, h1.large_nome.large_nome {
     font-size: 3.875rem;
     line-height: 3rem;
     padding-top: 5px;
     padding-bottom: 5px;
+    color: white;
+    padding: 15%;
 }
+
+
 .texto{
-    position: absolute;
-    text-align: left;
-    top: 100px;
     width: 750px;
-    line-height: 30px;
-    height: 30px;
-    padding-left: 35%;
 }
 
 .bg-projects{
@@ -65,10 +103,6 @@ body{
 
 .logo{
     padding: 30px;
-}
-
-.bg-image{
-    margin-left: 10%;
 }
 
 .logo a:hover{
