--- a/main.css
+++ b/main.css
@@ -12,13 +12,8 @@ body{
     -webkit-text-size-adjust: 100%;
     color: black;
     overflow-x: hidden;
-    background-color: #a0a0a0;
+    background-color: #10141c;
     margin: 0;
-}
-
-.bg-image{
-    
-    
 }
 
 .home-top{
@@ -29,12 +24,17 @@ body{
     transition: 250ms;
 }
 
-.h2, h1, h1.large, h2, h3 {
+.h2, h1, h1.large, h2, h3{
     box-sizing: border-box;
     font-family: "Helvetica Now Display DW",sans-serif;
     font-weight: 800;
     letter-spacing: -.01em;
-    color: #0f141e;
+    color: #ffffff;
+}
+
+.bg-projects{
+    padding-top: 5%;
+    text-align: center;
 }
 
 #sup{
@@ -95,11 +95,6 @@ body{
     width: 750px;
 }
 
-.bg-projects{
-    
-    text-align: left;
-    padding-left: 5%;
-}
 
 .logo{
     padding: 30px;
@@ -114,28 +109,30 @@ body{
 
 
 .item-portfolio{
-
-    display: inline-block;
+    
+    text-align: center;
     padding-top: 2%;
 }
 
 
-#img1, #img3{
-    width: 670px;
-    height: 660px;
-}
-
-#img2, #img4{
-    margin-left: 6.7%;
-    width: 670px;
-    height: 660px;
-}
-
-.item-portfolio a:hover{
-    
-    opacity: 0.5;
+#img{
+    width: 500px;
+    height: 600px;
+    margin: 10;
     -webkit-transition: opacity 0.5s ease-out;
     -moz-transition: opacity 0.5s ease-out;
+}
+
+#img:hover{
+    width: 520px;
+    height: 620px;
+    transition: 500ms;
+    opacity: 1;
+}
+
+#img:not(:hover){
+    opacity: 0.3;
+    transition: 500ms;
 }
 
 .end-page{
@@ -162,6 +159,10 @@ a, span{
     display: inline-block;
 }
 
+#contato{
+    color: white;
+}
+
 .social-media{
     padding-left: 65%;
 }
@@ -171,8 +172,8 @@ a, span{
 }
 
 .copyright{
-    color: gray;
-    padding-left: 2%;
+    color: white;
+    opacity: 0.2;
 }
 
 
