--- a/main.css
+++ b/main.css
@@ -30,6 +30,14 @@ body{
     color: #ffffff;
 }
 
+h3{
+    box-sizing: border-box;
+    font-family: "Helvetica Now Display DW",sans-serif;
+    font-weight: 800;
+    letter-spacing: -.01em;
+    color: #ffffff;
+}
+
 .bg-projects{
     padding-top: 5%;
     text-align: center;
